--- a/index.html
+++ b/index.html
@@ -2,40 +2,41 @@
 layout: page
 title: Home
 ---
-<div class="col-xs-12 col-md-4">
-  <p>
-    <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width: 200px; height: auto; margin-right: 20px; margin-bottom: 10px">
-  </p>
+<div class="container">
+  <div class="col-xs-12 col-md-4">
+    <p>
+      <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width: 200px; height: auto; margin-right: 20px; margin-bottom: 10px">
+    </p>
+  </div>
+
+  <div class="container col-xs-12 col-md-8">
+    <p style="font-size: 1.2rem;" >
+      I am a M.A student studying cognitive psychology at Seoul National University.
+      I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. 
+      With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
+    </p>
+    <div class="col-sm-5"
+      <h2>Interest</h2>
+      <div style="font-size: 1.2rem;"> 
+        <ul>
+          <li>Metacognition</li>
+          <li>Decision-making</li>
+          <li>Neuroimaging</li>
+          <li>Computational Modeling</li>
+        </ul>
+      </div>
+    </div>
+    <div class="col-sm-7">
+      <h2>Education</h2>
+      <div style = "font-size: 1.2rem;">
+        <p>B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</p>
+        <p>Seoul National University</p>
+        <p>M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
+        <p>Seoul National University</p>
+      </div>
+    </div>
+  </div>          
 </div>
-
-<div class="col-xs-12 col-md-8">
-  <p style="font-size: 1.2rem;" >
-    I am a M.A student studying cognitive psychology at Seoul National University.
-    I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. 
-    With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
-  </p>
-  <div class="col-sm-5"
-    <h2>Interest</h2>
-    <div style="font-size: 1.2rem;"> 
-      <ul>
-        <li>Metacognition</li>
-        <li>Decision-making</li>
-        <li>Neuroimaging</li>
-        <li>Computational Modeling</li>
-      </ul>
-    </div>
-  </div>
-  <div class="col-sm-7">
-    <h2>Education</h2>
-    <div style = "font-size: 1.2rem;">
-      <p>B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</p>
-      <p>Seoul National University</p>
-      <p>M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
-      <p>Seoul National University</p>
-    </div>
-  </div>
-</div>          
-
 {% for post in site.categories.documentation %}
   <!--<a href="{{ site.github.url }}{{ post.url }}">-->
     <!--<div class="featured-posts" {% if post.image %}style="background-image:url({{ site.github.url }}/img/heesun_img)"{% endif %}>-->
