--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@ title: Home
 ---
 <div class="container">
   <div class="col-xs-12 col-md-4">
-    <p>
-      <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width: 200px; height: auto; margin-right: 20px; margin-bottom: 10px">
-    </p>
+    <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width: 200px; height: auto; margin-right: 20px; margin-bottom: 10px">
   </div>
 
   <div class="container col-xs-12 col-md-8">
-    <p style="font-size: 1.2rem;" >
+    <p style="font-size: 1.2rem;">
       I am a M.A student studying cognitive psychology at Seoul National University.
       I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. 
       With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
     </p>
-    <div class="col-sm-5"
+    <div class="col-sm-5">
       <h2>Interest</h2>
       <div style="font-size: 1.2rem;"> 
         <ul>
