--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
     <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width: 200px; height: auto; margin-right: 20px; margin-bottom: 10px">
   </div>
 
-  <div class="container col-xs-12 col-md-8">
+  <div class="col-xs-12 col-md-8">
     <p style="font-size: 1.2rem;">
       I am a M.A student studying cognitive psychology at Seoul National University.
       I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. 
