--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 layout: page
 title: About me
 ---
+<style>
+  .col-md-4 {
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  .col-md-8 {
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+</style>  
 <div class="container">
   <div class="col-xs-12 col-md-4">
     <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width: 200px; height: auto; margin-right: 20px; margin-bottom: 10px">
@@ -13,7 +25,7 @@ title: About me
       I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. 
       With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
     </p>
-    <div class="col-sm-5">
+    <div class="col-sm-5" style="clear: both">
       <h2>Interest</h2>
       <div style="font-size: 1.2rem;"> 
         <ul>
