--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ title: About me
         </ul>
       </div>
     </div>
-    <div class="col-sm-7">
+    <div class="col-sm-7" style="clear: both">
       <h2>Education</h2>
       <div style = "font-size: 1.2rem;">
         <p>B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</p>
