--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@ title: About me
     padding-right: 15px;
     padding-left: 15px;
   }
+  .contents {
+    font-family: Georgia, "Times New Roman", serif;
+    font-size: 1.2rem;
+  }
 </style>  
 <div class="container">
   <div class="col-xs-12 col-md-4">
@@ -20,14 +24,14 @@ title: About me
   </div>
 
   <div class="col-xs-12 col-md-8">
-    <p style="font-size: 1.2rem;">
+    <p class="contents">
       I am a M.A student studying cognitive psychology at Seoul National University.
       I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. 
       With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
     </p>
     <div class="col-sm-5" style="clear: both">
       <h2>Interest</h2>
-      <div style="font-size: 1.2rem;"> 
+      <div class="contents"> 
         <ul>
           <li>Metacognition</li>
           <li>Decision-making</li>
@@ -38,7 +42,7 @@ title: About me
     </div>
     <div class="col-sm-7" style="clear: both">
       <h2>Education</h2>
-      <div style = "font-size: 1.2rem;">
+      <div class="contents">
         <p>B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</p>
         <p>Seoul National University</p>
         <p>M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
@@ -47,10 +51,4 @@ title: About me
     </div>
   </div>          
 </div>
-{% for post in site.categories.documentation %}
-  <!--<a href="{{ site.github.url }}{{ post.url }}">-->
-    <!--<div class="featured-posts" {% if post.image %}style="background-image:url({{ site.github.url }}/img/heesun_img)"{% endif %}>-->
-      <!--<h2><span>{{ post.title }}</span></h2>-->
-    <!--</div>
-  </a>-->
-{% endfor %}
+
