--- a/index.html
+++ b/index.html
@@ -29,26 +29,28 @@ title: About me
       I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. 
       With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
     </p>
-    <div class="col-sm-5" style="clear: both">
-      <h2>Interest</h2>
-      <div> 
-        <ul class="contents">
-          <li>Metacognition</li>
-          <li>Decision-making</li>
-          <li>Neuroimaging</li>
-          <li>Computational Modeling</li>
-        </ul>
+    <div class="row">
+      <div class="col-sm-5" style="clear: both">
+        <h2>Interest</h2>
+        <div> 
+          <ul class="contents">
+            <li>Metacognition</li>
+            <li>Decision-making</li>
+            <li>Neuroimaging</li>
+            <li>Computational Modeling</li>
+          </ul>
+        </div>
       </div>
-    </div>
-    <div class="col-sm-7">
-      <h2>Education</h2>
-      <div>
-        <p class="contents">
-          <br>B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</br>
-          <br>Seoul National University</br>
-          <br>M.A., Cognitive Psychology (Mar, 2020 - Current)</br>
-          <br>Seoul National University</br>
-        </p>
+      <div class="col-sm-7">
+        <h2>Education</h2>
+        <div>
+          <p class="contents">
+            <br>B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</br>
+            <br>Seoul National University</br>
+            <br>M.A., Cognitive Psychology (Mar, 2020 - Current)</br>
+            <br>Seoul National University</br>
+          </p>
+        </div>
       </div>
     </div>
   </div>          
