--- a/index.html
+++ b/index.html
@@ -14,9 +14,37 @@ title: About me
     padding-left: 15px;
   }
   .contents {
-    font-family: Georgia, "Times New Roman", serif;
-    font-size: 1.2rem;
+    font-family: 'Merriweather', serif;
   }
+ul, ol, dl {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+ul.ul-interests li {
+  font-size: 0.9rem;
+}
+
+ul.ul-edu {
+  list-style: none;
+}
+
+ul.ul-edu li {
+  position: relative;
+  padding: 0px 15px 4px 3px;
+}
+
+ul.ul-edu li .description p {
+  margin: 0;
+}
+
+ul.ul-edu li .description p.course {
+  font-size: 0.9rem;
+}
+
+ul.ul-edu li .description p.institution {
+  font-size: 0.75rem;
+  color: rgba(0,0,0,0.6);
+}
 </style>  
 <div class="container">
   <div class="col-xs-12 col-md-4">
@@ -24,7 +52,7 @@ title: About me
   </div>
 
   <div class="col-xs-12 col-md-8">
-    <p class="contents">
+    <p class="contents" style="font-size: 1.2rem;">
       I am a M.A student studying cognitive psychology at Seoul National University.
       I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. 
       With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
@@ -33,7 +61,7 @@ title: About me
       <div class="col-sm-5" style="clear: both">
         <h2>Interest</h2>
         <div> 
-          <ul class="contents">
+          <ul class="interest contents">
             <li>Metacognition</li>
             <li>Decision-making</li>
             <li>Neuroimaging</li>
@@ -44,12 +72,21 @@ title: About me
       <div class="col-sm-7">
         <h2>Education</h2>
         <div>
-          <p class="contents">
-            <br>B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</br>
-            <br>Seoul National University</br>
-            <br>M.A., Cognitive Psychology (Mar, 2020 - Current)</br>
-            <br>Seoul National University</br>
-          </p>
+          <ul class="contents ul-edu fa-ul">
+            <li>
+              <i class="fa-li fa fa-graduation-cap"></i>
+              <div class="description">
+                <p class="course">B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</p>
+                <p class="institution">Seoul National University</p>
+              </div>
+            </li>
+            <li>
+              <i class="fa-li fa fa-graduation-cap"></i>
+              <div class="description">
+                <p class="course">M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
+                <p class="institution">Seoul National University</p>
+              </div>
+            </li>
         </div>
       </div>
     </div>
