--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ ul.ul-edu li .description p.institution {
       <div class="col-sm-7">
         <h2>Education</h2>
         <div>
-          <ul class="contents ul-edu fa-ul">
+          <ul class="ul-edu fa-ul contents">
             <li>
               <i class="fa-li fa fa-graduation-cap"></i>
               <div class="description">
