--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ ul.ul-edu li .description p.institution {
       I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. 
       With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
     </p>
-    <div class="row">
-      <div class="col-sm-5" style="clear: both">
+    <div class="row" style="clear:both">
+      <div class="col-sm-5">
         <h2>Interest</h2>
         <div> 
           <ul class="ul-interests contents">
