--- a/index.html
+++ b/index.html
@@ -47,49 +47,51 @@ ul.ul-edu li .description p.institution {
 }
 </style>  
 <div class="container">
-  <div class="col-xs-12 col-md-4">
-    <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width: 200px; height: auto; margin-right: 20px; margin-bottom: 10px">
-  </div>
-
-  <div class="col-xs-12 col-md-8">
-    <p class="contents" style="font-size: 1.2rem;">
-      I am a M.A student studying cognitive psychology at Seoul National University.
-      I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. 
-      With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
-    </p>
-    <div class="row" style="clear:both">
-      <div class="col-sm-5">
-        <h2>Interest</h2>
-        <div> 
-          <ul class="ul-interests contents">
-            <li>Metacognition</li>
-            <li>Decision-making</li>
-            <li>Neuroimaging</li>
-            <li>Computational Modeling</li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-sm-7">
-        <h2>Education</h2>
-        <div>
-          <ul class="ul-edu fa-ul contents">
-            <li>
-              <i class="fa-li fa fa-graduation-cap"></i>
-              <div class="description">
-                <p class="course">B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</p>
-                <p class="institution">Seoul National University</p>
-              </div>
-            </li>
-            <li>
-              <i class="fa-li fa fa-graduation-cap"></i>
-              <div class="description">
-                <p class="course">M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
-                <p class="institution">Seoul National University</p>
-              </div>
-            </li>
-        </div>
-      </div>
+  <div class="row">
+    <div class="col-xs-12 col-md-4">
+      <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width: 200px; height: auto; margin-right: 20px; margin-bottom: 10px">
     </div>
-  </div>          
+
+    <div class="col-xs-12 col-md-8">
+      <p class="contents" style="font-size: 1.2rem;">
+        I am a M.A student studying cognitive psychology at Seoul National University.
+        I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. 
+        With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
+      </p>
+      <div class="row">
+        <div class="col-sm-5">
+          <h2>Interest</h2>
+          <div> 
+            <ul class="ul-interests contents">
+              <li>Metacognition</li>
+              <li>Decision-making</li>
+              <li>Neuroimaging</li>
+              <li>Computational Modeling</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-7">
+          <h2>Education</h2>
+          <div>
+            <ul class="ul-edu fa-ul contents">
+              <li>
+                <i class="fa-li fa fa-graduation-cap"></i>
+                <div class="description">
+                  <p class="course">B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</p>
+                  <p class="institution">Seoul National University</p>
+                </div>
+              </li>
+              <li>
+                <i class="fa-li fa fa-graduation-cap"></i>
+                <div class="description">
+                  <p class="course">M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
+                  <p class="institution">Seoul National University</p>
+                </div>
+              </li>
+          </div>
+        </div>
+      </div>
+    </div>          
+  </div>
 </div>
 
