--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@ layout: page
 title: About me
 ---
 <style>
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
   .col-md-4 {
     min-height: 1px;
     padding-right: 15px;
@@ -47,7 +52,9 @@ ul.ul-edu li .description p.institution {
 }
 </style>  
 <div class="container">
+  ::before
   <div class="row">
+    ::before
     <div class="col-xs-12 col-md-4">
       <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width: 200px; height: auto; margin-right: 20px; margin-bottom: 10px">
     </div>
@@ -59,6 +66,7 @@ ul.ul-edu li .description p.institution {
         With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
       </p>
       <div class="row">
+        ::before
         <div class="col-sm-5">
           <h2>Interest</h2>
           <div> 
@@ -94,4 +102,4 @@ ul.ul-edu li .description p.institution {
     </div>          
   </div>
 </div>
-
+  ::after
