--- a/index.html
+++ b/index.html
@@ -3,11 +3,6 @@ layout: page
 title: About me
 ---
 <style>
-*,
-*::after,
-*::before {
-  box-sizing: border-box;
-}
   .col-md-4 {
     min-height: 1px;
     padding-right: 15px;
@@ -51,22 +46,18 @@ ul.ul-edu li .description p.institution {
   color: rgba(0,0,0,0.6);
 }
 </style>  
-<div class="container">
-  ::before
-  <div class="row">
-    ::before
+<div class="container" style="box-sizing: border-box;">
+  <div class="row" style="box-sizing: border-box;">
     <div class="col-xs-12 col-md-4">
       <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width: 200px; height: auto; margin-right: 20px; margin-bottom: 10px">
     </div>
-
     <div class="col-xs-12 col-md-8">
       <p class="contents" style="font-size: 1.2rem;">
         I am a M.A student studying cognitive psychology at Seoul National University.
         I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. 
         With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
       </p>
-      <div class="row">
-        ::before
+      <div class="row" style="box-sizing: border-box;">
         <div class="col-sm-5">
           <h2>Interest</h2>
           <div> 
@@ -98,10 +89,7 @@ ul.ul-edu li .description p.institution {
               </li>
           </div>
         </div>
-          ::after
       </div>
     </div> 
-      ::after
   </div>
-    ::after
 </div>
