--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@ ul.ul-edu li .description p.institution {
         <div class="col-sm-7">
           <h2>Education</h2>
           <div>
-            <ul class="ul-edu fa-ul contents">
+            <ul class="ul-edu fa-ul">
               <li>
                 <i class="fa-li fa fa-graduation-cap"></i>
-                <div class="description">
+                <div class="description contents">
                   <p class="course">B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</p>
                   <p class="institution">Seoul National University</p>
                 </div>
               </li>
               <li>
                 <i class="fa-li fa fa-graduation-cap"></i>
-                <div class="description">
+                <div class="description contents">
                   <p class="course">M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
                   <p class="institution">Seoul National University</p>
                 </div>
