--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ ul.ul-edu li .description p.institution {
         I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. 
         With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
       </p>
-      <div class="row" style="box-sizing: border-box;">
+      <div class="row" style="box-sizing: border-box; clear:both;">
         <div class="col-sm-5">
           <h2>Interest</h2>
           <div> 
