--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: About me
     padding-left: 15px;
   }
   .contents {
-    font-family: Georgia, 'Times New Roman', serif;
+    font-family: 'Lora', 'Times New Roman', serif;
   }
 ul, ol, dl {
   margin-top: 0;
