--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@ title: About me
     padding-left: 15px;
   }
   .contents {
-    font-family: 'Lora', 'Times New Roman', serif;
+    font-family: Lora, 'Times New Roman', serif;
   }
 ul, ol, dl {
   margin-top: 0;
   margin-bottom: 1rem;
 }
 ul.ul-interests li {
-  font-size: 18px;
+  font-size: 1rem;
 }
 
 ul.ul-edu {
@@ -44,11 +44,11 @@ ul.ul-edu li .description p {
 }
 
 ul.ul-edu li .description p.course {
-  font-size: 18px;
+  font-size: 1rem;
 }
 
 ul.ul-edu li .description p.institution {
-  font-size: 15px;
+  font-size: 0.9rem;
   color: rgba(0,0,0,0.6);
 }
 </style>  
@@ -58,7 +58,7 @@ ul.ul-edu li .description p.institution {
       <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width: 200px; height: auto; margin-right: 20px; margin-bottom: 10px">
     </div>
     <div class="col-xs-12 col-md-8">
-      <p class="contents" style="font-size: 18px;">
+      <p class="contents" style="font-size: 1rem;">
         I am a M.A student studying cognitive psychology at Seoul National University.
         I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. 
         With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
